--- a/linux-2.6.35.4/arch/arm/configs/nuc945_defconfig
+++ b/linux-2.6.35.4/arch/arm/configs/nuc945_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.9
-# Thu Sep  8 10:04:39 2011
+# Tue Mar  1 13:17:09 2011
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -238,7 +238,7 @@ CONFIG_ARCH_W90X900=y
 # CONFIG_ARCH_DAVINCI is not set
 # CONFIG_ARCH_OMAP is not set
 # CONFIG_PLAT_SPEAR is not set
-CONFIG_CPU_NUC960=y
+CONFIG_CPU_NUC945=y
 
 #
 # NUC910 Machines
@@ -248,7 +248,7 @@ CONFIG_CPU_NUC960=y
 #
 # NUC945 Machines
 #
-# CONFIG_MACH_W90P945EVB is not set
+CONFIG_MACH_W90P945EVB=y
 
 #
 # NUC946 Machines
@@ -273,7 +273,7 @@ CONFIG_CPU_NUC960=y
 #
 # NUC960 Machines
 #
-CONFIG_MACH_W90N960EVB=y
+# CONFIG_MACH_W90N960EVB is not set
 
 #
 # Processor Type
@@ -722,7 +722,7 @@ CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=320
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=240
 # CONFIG_INPUT_JOYDEV is not set
-# CONFIG_INPUT_EVDEV is not set
+CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 
 #
@@ -732,7 +732,23 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_Y=240
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
 # CONFIG_INPUT_TABLET is not set
-# CONFIG_INPUT_TOUCHSCREEN is not set
+CONFIG_INPUT_TOUCHSCREEN=y
+# CONFIG_TOUCHSCREEN_AD7879 is not set
+# CONFIG_TOUCHSCREEN_DYNAPRO is not set
+# CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
+# CONFIG_TOUCHSCREEN_FUJITSU is not set
+# CONFIG_TOUCHSCREEN_GUNZE is not set
+# CONFIG_TOUCHSCREEN_ELO is not set
+# CONFIG_TOUCHSCREEN_WACOM_W8001 is not set
+# CONFIG_TOUCHSCREEN_MTOUCH is not set
+# CONFIG_TOUCHSCREEN_INEXIO is not set
+# CONFIG_TOUCHSCREEN_MK712 is not set
+# CONFIG_TOUCHSCREEN_PENMOUNT is not set
+# CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
+# CONFIG_TOUCHSCREEN_TOUCHWIN is not set
+# CONFIG_TOUCHSCREEN_USB_COMPOSITE is not set
+# CONFIG_TOUCHSCREEN_TOUCHIT213 is not set
+# CONFIG_TOUCHSCREEN_NUC900 is not set
 # CONFIG_INPUT_MISC is not set
 
 #
@@ -999,7 +1015,25 @@ CONFIG_USB_MASS_STORAGE=m
 # CONFIG_USB_GPIO_VBUS is not set
 # CONFIG_USB_ULPI is not set
 # CONFIG_NOP_USB_XCEIV is not set
-# CONFIG_MMC is not set
+CONFIG_MMC=y
+# CONFIG_MMC_DEBUG is not set
+# CONFIG_MMC_UNSAFE_RESUME is not set
+
+#
+# MMC/SD/SDIO Card Drivers
+#
+CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK_BOUNCE=y
+# CONFIG_SDIO_UART is not set
+# CONFIG_MMC_TEST is not set
+
+#
+# MMC/SD/SDIO Host Controller Drivers
+#
+# CONFIG_MMC_SDHCI is not set
+CONFIG_MMC_NUC900_SD=y
+CONFIG_NUC900_SD_SD0=y
+# CONFIG_NUC900_SD_SD1 is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
