--- a/linux-2.6.35.4/drivers/gpio/Makefile
+++ b/linux-2.6.35.4/drivers/gpio/Makefile
@@ -7,7 +7,7 @@
 ccflags-$(CONFIG_DEBUG_GPIO)	+= -DDEBUG
 
 obj-$(CONFIG_GPIOLIB)		+= gpiolib.o
-
+obj-$(CONFIG_GPIO_NUC900)	+= nuc900-gpio.o
 obj-$(CONFIG_GPIO_ADP5520)	+= adp5520-gpio.o
 obj-$(CONFIG_GPIO_ADP5588)	+= adp5588-gpio.o
 obj-$(CONFIG_GPIO_LANGWELL)	+= langwell_gpio.o
